Added my new ipynb file URL

--- a/variables.ipynb
+++ b/variables.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "You can test the presented Python codes on cloud-computing platforms without any installation on your computer.\n",
     "\n",
-    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ezdanapak/GIS_OS_Doc/blob/master/docs/Programming/Python_for_geographers/notebooks/01_variables.ipynb)\n",
+    "[![image](https://colab.research.google.com/github/ezdanapak/jupyternote-test/blob/main/variables.ipynb)\n",
     "\n",
     "| **HCODE** |         **NAMN1**          |           **NAMA1**           |           **NAML1**            |\n",
     "|:-------:|:------------------:|:--------------------:|:---------------------:|\n",
